# devdash

./: .gitignore  Cargo.toml  README.md  devdash.toml
devdash-cli/: Cargo.toml
devdash-cli/src/: main.rs
devdash-core/: Cargo.toml
devdash-core/src/: config.rs  event.rs  layout.rs  lib.rs  plugin.rs  registry.rs  widget.rs
devdash-plugin-sdk/: Cargo.toml
devdash-plugin-sdk/src/: lib.rs
devdash-widgets/: Cargo.toml
devdash-widgets/src/: disk.rs  error.rs  git.rs  lib.rs  memory.rs  network.rs  process.rs
devdash-widgets/src/common/: colors.rs  formatting.rs
examples/example_plugin/: Cargo.toml
examples/example_plugin/src/: lib.rs
