[package]
name = "devdash-core"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam = "0.8.4"
crossterm = "0.29.0"
dirs = "6.0.0"
libloading = "0.8.9"
notify = "8.2.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.37.2"
thiserror = "2.0.17"
toml = "0.9.8"
